add archived route
